Grade all submissions on manual workflow dispatch
Update grading workflow to detect manual ('workflow_dispatch') triggers and grade all submissions by finding all 'index.html' files. This ensures that when the workflow is run manually, it does not limit grading to only changed files.

--- a/.github/workflows/grading.yml
+++ b/.github/workflows/grading.yml
@@ -41,7 +41,11 @@ jobs:
           fi
           
           # Get list of changed files
-          if [ "${{ github.event_name }}" == "pull_request" ]; then
+          if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
+            # Manual trigger - grade ALL submissions
+            echo "📌 Manual trigger detected - grading ALL submissions"
+            CHANGED_FILES=$(find "$SUBMISSIONS_DIR" -name "index.html" -type f)
+          elif [ "${{ github.event_name }}" == "pull_request" ]; then
             # For PR, compare with base branch
             CHANGED_FILES=$(git diff --name-only origin/${{ github.base_ref }}...HEAD)
           else
